name:                   staversion
version:                0.1.0.0
author:                 Toshio Ito <debug.ito@gmail.com>
maintainer:             Toshio Ito <debug.ito@gmail.com>
license:                BSD3
license-file:           LICENSE
synopsis:               What version is the package X in stackage lts-Y.ZZ?
description:            A command line tool to answer questions like "What version is the package X in stackage lts-Y.ZZ?" See README.md.
category:               Development
cabal-version:          >= 1.10
build-type:             Simple
extra-source-files:     README.md, ChangeLog.md,
                        test/data/*.yaml
homepage:               https://github.com/debug-ito/staversion
bug-reports:            https://github.com/debug-ito/staversion/issues

library
  default-language:     Haskell2010
  hs-source-dirs:       src
  ghc-options:          -Wall -fno-warn-unused-imports
  default-extensions:   OverloadedStrings
  -- other-extensions:     
  exposed-modules:      Staversion.Internal.BuildPlan,
                        Staversion.Internal.Query,
                        Staversion.Internal.Command,
                        Staversion.Internal.Log,
                        Staversion.Internal.Exec,
                        Staversion.Internal.Format
  other-modules:        Paths_staversion
  build-depends:        base >=4.6,
                        unordered-containers,
                        aeson,
                        text,
                        bytestring,
                        yaml >=0.8.3,
                        filepath,
                        directory,
                        optparse-applicative

executable staversion
  default-language:     Haskell2010
  hs-source-dirs:       app
  main-is:              Main.hs
  ghc-options:          -Wall -fno-warn-unused-imports -rtsopts -threaded "-with-rtsopts=-N"
  -- other-modules:        
  -- default-extensions:   
  -- other-extensions:     
  build-depends:        base, staversion

test-suite spec
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  hs-source-dirs:       test
  ghc-options:          -Wall -fno-warn-unused-imports "-with-rtsopts=-M512m"
  main-is:              Spec.hs
  default-extensions:   OverloadedStrings
  -- other-extensions:     
  other-modules:        Staversion.Internal.BuildPlanSpec,
                        Staversion.Internal.ExecSpec,
                        Staversion.Internal.FormatSpec,
                        Staversion.Internal.TestUtil
  build-depends:        base, staversion, text, filepath,
                        hspec
                        
source-repository head
  type:                 git
  location:             https://github.com/debug-ito/staversion.git
