name:                   staversion
version:                0.3.0.0
author:                 Toshio Ito <debug.ito@gmail.com>
maintainer:             Toshio Ito <debug.ito@gmail.com>
license:                BSD3
license-file:           LICENSE
synopsis:               What version is the package X in stackage lts-Y.ZZ?
description:            A command-line tool to look for version numbers for Haskell packages in specific stackage resolvers. See README.md
category:               Development
cabal-version:          >= 1.10
build-type:             Simple
extra-source-files:     README.md, ChangeLog.md,
                        test/data/conpact_build_plan.yaml,
                        -- Cabal's wild-card (*) doesn't match periods (.)
                        test/data/lts-7.0_conpact.yaml,
                        test/data/lts-4.2.yaml,
                        test/data/lts-2.22_conpact.yaml,
                        test/data/snapshots.json,
                        test/data/aeson_preferred.json,
                        test/data/doctest.cabal_test,
                        test/data/conduit.cabal_test,
                        test/data/foobar.cabal_test,
                        test/data/braces.cabal_test
                        
homepage:               https://github.com/debug-ito/staversion
bug-reports:            https://github.com/debug-ito/staversion/issues

library
  default-language:     Haskell2010
  hs-source-dirs:       src
  ghc-options:          -Wall -fno-warn-unused-imports
  default-extensions:   OverloadedStrings
  other-extensions:     CPP, DeriveDataTypeable, TupleSections
  exposed-modules:      Staversion.Internal.BuildPlan,
                        Staversion.Internal.BuildPlan.Stackage,
                        Staversion.Internal.BuildPlan.Hackage,
                        Staversion.Internal.BuildPlan.Version,
                        Staversion.Internal.Query,
                        Staversion.Internal.Result,
                        Staversion.Internal.Cabal,
                        Staversion.Internal.Command,
                        Staversion.Internal.Log,
                        Staversion.Internal.Exec,
                        Staversion.Internal.Format,
                        Staversion.Internal.Aggregate,
                        Staversion.Internal.Version
  other-modules:        Paths_staversion,
                        Staversion.Internal.HTTP,
                        Staversion.Internal.Megaparsec
  build-depends:        base
                      , unordered-containers
                      , aeson
                      , text
                      , bytestring
                      , yaml
                      , filepath
                      , directory
                      , optparse-applicative
                      , containers
                      , http-client
                      , http-client-tls
                      , http-types
                      , transformers
                      , transformers-compat
                      , megaparsec
                      , semigroups
                      , Cabal
                      , pretty
                      , ansi-wl-pprint

executable staversion
  default-language:     Haskell2010
  hs-source-dirs:       app
  main-is:              Main.hs
  ghc-options:          -Wall -fno-warn-unused-imports -rtsopts -threaded "-with-rtsopts=-N"
  -- other-modules:        
  -- default-extensions:   
  -- other-extensions:     
  build-depends:        base, staversion

test-suite spec
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  hs-source-dirs:       test
  ghc-options:          -Wall -fno-warn-unused-imports -fno-warn-orphans "-with-rtsopts=-M512m"
  main-is:              Spec.hs
  default-extensions:   OverloadedStrings
  -- other-extensions:     
  other-modules:        Staversion.Internal.BuildPlanSpec,
                        Staversion.Internal.BuildPlan.StackageSpec,
                        Staversion.Internal.BuildPlan.HackageSpec,
                        Staversion.Internal.BuildPlan.VersionSpec,
                        Staversion.Internal.ExecSpec,
                        Staversion.Internal.FormatSpec,
                        Staversion.Internal.CabalSpec,
                        Staversion.Internal.AggregateSpec,
                        Staversion.Internal.TestUtil
  build-depends:        base, staversion, text, filepath, bytestring,
                        Cabal, semigroups,
                        hspec,
                        QuickCheck

flag network-test
  description: Enable network tests.
  default: False

test-suite network-test
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  hs-source-dirs:       test
  ghc-options:          -Wall -fno-warn-unused-imports -fno-warn-orphans "-with-rtsopts=-M512m"
  main-is:              NetworkTest.hs
  default-extensions:   OverloadedStrings
  if !flag(network-test)
    buildable:          False
  -- other-extensions:     
  other-modules:        Staversion.Internal.TestUtil
  build-depends:        base, staversion, http-client, http-client-tls, bytestring, Cabal,
                        hspec

                        
source-repository head
  type:                 git
  location:             https://github.com/debug-ito/staversion.git
