name:                   foobar
version:                0.1.2.0
author:                 Toshio Ito <debug.ito@gmail.com>
maintainer:             Toshio Ito <debug.ito@gmail.com>
license:                BSD3
license-file:           LICENSE
synopsis:               foo
description:            bar
category:               Example
cabal-version:          >= 1.10
build-type:             Simple
-- extra-source-files:     README.md, ChangeLog.md,
                        
library
  default-language:     Haskell2010
  hs-source-dirs:       src
  ghc-options:          -Wall -fno-warn-unused-imports
  default-extensions:   OverloadedStrings
  other-extensions:     CPP, DeriveDataTypeable, TupleSections
  other-modules:        Paths_staversion,
                        Staversion.Internal.HTTP
  build-depends:        base >=4.6 && <4.10,
                        unordered-containers >=0.2.3 && <0.3,

executable foobar
  default-language:     Haskell2010
  hs-source-dirs:       app
  main-is:              Main.hs
  ghc-options:          -Wall -fno-warn-unused-imports -rtsopts -threaded "-with-rtsopts=-N"
  -- other-modules:        
  -- default-extensions:   
  -- other-extensions:     
  -- build-depends:        base, staversion
  -- -- (no build-depends case (quite unlikely, though..))

test-suite spec
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  hs-source-dirs:       test
  ghc-options:          -Wall -fno-warn-unused-imports -fno-warn-orphans "-with-rtsopts=-M512m"
  main-is:              Spec.hs
  default-extensions:   OverloadedStrings
  build-depends:        base, staversion, text, filepath, bytestring,


flag network-test
  description: Enable network tests.
  default: False

test-suite network-test
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  hs-source-dirs:       test
  ghc-options:          -Wall -fno-warn-unused-imports -fno-warn-orphans "-with-rtsopts=-M512m"
  main-is:              NetworkTest.hs
  default-extensions:   OverloadedStrings
  if !flag(network-test)
    buildable:          False
  -- other-extensions:     
  other-modules:        Staversion.Internal.TestUtil
  build-depends:        base, http-client
