name:                   simple
version:                0.1.2.0
author:                 Toshio Ito <debug.ito@gmail.com>
maintainer:             Toshio Ito <debug.ito@gmail.com>
license:                BSD3
license-file:           LICENSE
synopsis:               simple
description:            simple test file
category:               Example
cabal-version:          >= 1.10
build-type:             Simple
                        
library
  default-language:     Haskell2010
  hs-source-dirs:       src
  ghc-options:          -Wall -fno-warn-unused-imports
  build-depends:        base >=4.6 && <4.10,
                        hashable,
                        parsers

